Quorum3/Library/Tests/TemplatingGenerated/Pass/TwoTypePriPriIntegerRetundefined.quorum
class Main
    action Main
        integer one = 66
        integer two = 66
        Yoda<integer, integer, undefined> yoda
        undefined ret = yoda:useForce(one, two)
        output "passed"
     end
end
