Quorum3/Library/Tests/TemplatingGenerated/Fail/TwoTypePriPriIntegerRetTextObjFail.quorum
class Main
    action Main
        integer one = 66
        integer two = 66
        Yoda<integer, integer, Text> yoda
        boolean wrongRet = yoda(one, two)
     end
end
